@startuml DiagrammaDelleClassi
skinparam linetype ortho
'left to right direction


'****************** CLASSI ******************
class Tag {
    - final int id
    - String descrizione
    - {static} int index

    + Tag(String descrizione)
    + int getId()
    + String getDescrizione()
    + void setDescrizione(String descrizione)
    + {static} void setIndex(int index)
    + boolean equals(Object o)
}

class Contact {
    - String name 
    - String surname 
    - String[] numbers
    - String[] emails
    - byte[] profilePicture
    - Set<Integer> tagIndexes

    + Contact(String name, String surname)
    + String getName()
    + void setName(String name)
    + String getSurname()
    + void setSurname(String surname)
    + String[] getNumbers()
    + void setNumbers(String[] numbers)
    + String[] getEmails()
    + void setEmails(String[] emails)
    + byte[] getProfilePicture()
    + void setProfilePicture(byte[] profilePicture)
    + Set<Integer> getAllTagIndexes()
    + Integer removeTagIndex(Integer tagIndex)
    + void addTagIndex(Integer tagIndex)
    + boolean equals(Object o)    
}

class AddressBook {
    - {static} AddressBook instance
    - ObservableList<Contact> contacts
    - ObservableList<Tag> tags
    - String dbUrl
    - Database db

    - AddressBook()
    + ObservableList<Contact> getAllContacts()
    + void addContact(Contact c)
    + Contact removeContact(Contact c)
    + ObservableList<Tag> getAllTags()
    + void addTag(Tag tag)
    + Tag removeTag(Tag tag)
    + {static} AddressBook getInstance()
    + void setDBUrl(String dbUrl)
    + String getDBUrl()
    + void saveOBJ()
    + AddressBook loadOBJ()
    + void saveToDB()
    + AddressBook loadFromDB()   
    + void loadConfig()
    + void saveConfig()
    + void initDB()
}

class MainController {
    - AddressBook addressBook
    - Button deleteButton
    - Button saveButton
    - Button editButton
    - Button cancelButton
    - VBox tagVBox
    - TextField searchField
    - TextField nameField
    - TextField surnameField
    - TextField emailField
    - TextField numberField
    - ImageView profileImageView
    - ImageView filterImage
    - TableView<Contact> contactsTable
    - TableColumn<Contact,String> nameColumn
    - TableColumn<Contact,String> surnameColumn
    - AnchorPane contactDetailsPane
    - GridPane numbersPane
    - GridPane emailsPane
    - ContextMenu contextMenu

    + void initialize()
    - void setImageCircle()
    - void searchFieldBinding()    
    - void onFilterClicked()
    - void onAddContact()
    - void onContactClicked(MouseEvent event)
    - void onSaveContact()
    - void onModifyContact()
    - void onRemoveContact()
    - void onCancel()
    - void showImportPopup()
    - void showExportPopup()
    - void showConfigPopup()
    - void showImagePopup()
    - void showManageTagsPopup()
}

class ImportPopupController {
    - ContactManager contactManager
    - Button importButton

    + void initialize()
    - void selectFile()
    - void onImport()
    - boolean checkCSVFormat()
    - boolean checkVCardFormat()
}

class ExportPopupController {
    - ContactManager contactManager
    - ChoiceBox<String> exportChoiceBox
    - RadioButton vCardButton
    - RadioButton csvButton
    - ToggleGroup ext
    - Button saveButton

    + void initialize()
    - void choosePath()
    - void onExport()
    - void onExportCSV()
    - void onExportVCard()
}

class ManageTagsPopupController {
    - TagManager tagManager
    - ListView<String> tagsListView
    - Button addButton
    - Button updateButton
    - Button deleteButton

    + void initialize()
    - void onAdd()
    - void onUpdate()
    - void onDelete()
}

class ImagePopupController {
    - ImageView imgAdd
    - HBox defaultImgHBox
    - File selectedImage
    - int imageIndex

    + void initialize()
    - void onImageAdd(MouseEvent event)
    + File getSelectedImage()
    + int getImageIndex()
}

class ConfirmPopupController {
    - onConfirm()
    - onCancel()
}

class ConfigPopupController {
    - Button verifyButton
    - Button confirmButton
    - TextField textField
    
    - void onVerify()
    - void onConfirm()
}

class Database {
    + Database(String url)
    + {static} boolean verifyDBUrl(String url)
    + void insertContact(Contact c)
    + void updateContact(Contact c)
    + void removeContact(Contact c)
    + void insertTag(Tag tag)
    + void updateTag(Tag tag)
    + void removeTag(Tag tag)
    + Collection<Contact> getAllContacts()
    + Collection<Tag> getAllTags()
    + void insertManyContacts(Collection<Contact> contacts)
    + void insertManyTags(Collection<Tag> tags)
    + Document contactToDocument(Contact c)
    + Contact documentToContact(Document d)
    + Document tagToDocument(Tag tag)
    + Tag documentToTag (Document d)
} 


'****************** INTERFACCE ******************
interface Initializable

interface Serializable

interface TagManager {
    +{abstract} void addTag(Tag tag)
    +{abstract} Tag removeTag(Tag tag)
    +{abstract} Tag getTag(int id)
    +{abstract} ObservableList<Tag> getAllTags()
}

interface ContactManager {
    +{abstract} ObservableList<Contact> getAllContacts()
    +{abstract} addContact(Contact c)
    +{abstract} removeContact(Contact c)
}


'****************** RELAZIONI ******************
Contact ..|> Serializable

Tag ..|> Serializable

AddressBook "1" o-- "0..*" Contact
AddressBook "1" *-- "0..1" Database
AddressBook "1" o-- "0..*" Tag
AddressBook ..|> TagManager
AddressBook ..|> ContactManager

MainController ..|> Initializable
MainController "1" o-- "1" AddressBook
MainController ..> ImagePopupController
MainController ..> ConfirmPopupController

ImportPopupController ..|> Initializable
ImportPopupController "1" o-- "1" ContactManager

ExportPopupController ..|> Initializable
ExportPopupController "1" o-- "1" ContactManager

ManageTagsPopupController ..|> Initializable
ManageTagsPopupController ..> ConfirmPopupController
ManageTagsPopupController "1" o-- "1" TagManager

ImagePopupController ..|> Initializable

@enduml